# innometrics

./: README.md
LinuxMetricsCollector/InnoMetrics/: CMakeLists.txt  README.md  main.cpp  send_demon_main.h  updater_demon_main.h
LinuxMetricsCollector/InnoMetrics/CMake/: ImportX11.cmake
LinuxMetricsCollector/InnoMetrics/InnoMetricsSources/: CMakeLists.txt  main.cpp
LinuxMetricsCollector/InnoMetrics/InnoMetricsSources/Sources/: AddTimeFilterDialog.h  Authorization.h  BrowserFile.cpp  BrowserFile.h  DbQueries.h  MainWindow.h  SettingDialog.h  WindowInfo.h  inno.cfg  measurements_main.h  send_demon_main.h  updater_demon_main.h
LinuxMetricsCollector/InnoMetrics/InnoMetricsSources/Sources/Helpers/: ConfigParser.h  HelpFunctions.h  Helper.cpp  Helper.h  SystemInfoHelper.cpp  SystemInfoHelper.h  WindowHelper.cpp
LinuxMetricsCollector/InnoMetrics/InnoMetricsSources/sqlite3/: sqlite3.h
LinuxMetricsCollector/InnoMetrics/InnoMetricsTests/: CMakeLists.txt  gtest.cpp
LinuxMetricsCollector/InnoMetrics/InnoMetricsTests/Tests/: basic_check.cpp  helper_check.cpp
LinuxMetricsCollector/InnoMetrics/Sources/: ApplicationType.h  BrowserFile.h  DbQueries.h  WindowInfo.cpp  WindowInfo.h  measurements_main.h
LinuxMetricsCollector/InnoMetrics/Sources/Helpers/: Helper.cpp  Helper.h  SystemInfoHelper.cpp  SystemInfoHelper.h  WindowHelper.h  XInputListener.cpp  XInputListener.h
macOSMetricsCollector/InnoMetricsCollector/: InnoMetricsCollector_Bridging_Header.h  Metric+CoreDataClass.swift  Podfile  Session+CoreDataClass.swift
macOSMetricsCollector/InnoMetricsCollector/InnoMetricsCollector/: AppDelegate.swift  BrowserInfoUtils.swift  CollectorController.swift  CollectorView.swift  CurrentWorkingApplicationController.swift  CurrentWorkingSessionController.swift  Info.plist  InnoMetricsTestApp-Bridging-Header.h  SessionInfoUtils.swift
macOSMetricsCollector/InnoMetricsCollector/InnoMetricsCollector.xcodeproj/: project.pbxproj
macOSMetricsCollector/InnoMetricsCollector/InnoMetricsCollector.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
macOSMetricsCollector/InnoMetricsCollector/InnoMetricsCollector.xcodeproj/project.xcworkspace/xcuserdata/denzap.xcuserdatad/: UserInterfaceState.xcuserstate
macOSMetricsCollector/InnoMetricsCollector/InnoMetricsCollector.xcodeproj/xcuserdata/denzap.xcuserdatad/xcschemes/: InnoMetricsCollector.xcscheme  xcschememanagement.plist
macOSMetricsCollector/InnoMetricsCollector/InnoMetricsCollector.xcworkspace/: contents.xcworkspacedata
macOSMetricsCollector/InnoMetricsCollector/InnoMetricsCollector.xcworkspace/xcuserdata/denzap.xcuserdatad/: UserInterfaceState.xcuserstate
macOSMetricsCollector/InnoMetricsCollector/InnoMetricsCollector/Assets.xcassets/AppIcon.appiconset/: Contents.json
macOSMetricsCollector/InnoMetricsCollector/InnoMetricsCollector/Assets.xcassets/dsa_pub.dataset/: Contents.json  dsa_pub.pem
macOSMetricsCollector/InnoMetricsCollector/InnoMetricsCollector/Assets.xcassets/statusIcon.imageset/: Contents.json
macOSMetricsCollector/InnoMetricsCollector/InnoMetricsCollector/Base.lproj/: MainMenu.xib
macOSMetricsCollector/InnoMetricsCollector/InnoMetricsCollector/InnoMetricsCollector.xcdatamodeld/InnoMetricsCollector.xcdatamodel/: contents
macOSMetricsCollector/InnoMetricsCollector/InnoMetricsCollectorHelper/InnoMetricsCollectorHelper/: AppDelegate.swift  Info.plist
macOSMetricsCollector/InnoMetricsCollector/InnoMetricsCollectorHelper/InnoMetricsCollectorHelper.xcodeproj/: project.pbxproj
macOSMetricsCollector/InnoMetricsCollector/InnoMetricsCollectorHelper/InnoMetricsCollectorHelper/Base.lproj/: MainMenu.xib
macOSMetricsCollector/InnometricsTransfer/: Podfile
macOSMetricsCollector/InnometricsTransfer/InnometricsTransfer/: AllMetricsController.swift  AppDelegate.swift  Application.swift  AuthorizationController.swift  AuthorizationUtils.swift  GoogleService-Info.plist  Info.plist  Keyword.swift  MainController.swift  MainWindowController.swift  Metric+CoreDataClass.swift  Metric+CoreDataProperties.swift  Metric.swift  MetricsController.swift  MetricsTransfer.swift  NewMetricsController.swift  ServerPrefs.swift  Session+CoreDataProperties.swift  Session.swift  UserPrefs.swift  ViewController.swift
macOSMetricsCollector/InnometricsTransfer/InnometricsTransfer.xcodeproj/: project.pbxproj
macOSMetricsCollector/InnometricsTransfer/InnometricsTransfer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
macOSMetricsCollector/InnometricsTransfer/InnometricsTransfer.xcodeproj/project.xcworkspace/xcuserdata/denzap.xcuserdatad/: UserInterfaceState.xcuserstate
macOSMetricsCollector/InnometricsTransfer/InnometricsTransfer.xcodeproj/xcuserdata/denzap.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
macOSMetricsCollector/InnometricsTransfer/InnometricsTransfer.xcworkspace/: contents.xcworkspacedata
macOSMetricsCollector/InnometricsTransfer/InnometricsTransfer.xcworkspace/xcuserdata/denzap.xcuserdatad/: UserInterfaceState.xcuserstate
macOSMetricsCollector/InnometricsTransfer/InnometricsTransfer/Assets.xcassets/AppIcon.appiconset/: Contents.json
macOSMetricsCollector/InnometricsTransfer/InnometricsTransfer/Assets.xcassets/dsa_pub.dataset/: dsa_pub.pem
macOSMetricsCollector/InnometricsTransfer/InnometricsTransfer/Assets.xcassets/logo.imageset/: Contents.json
macOSMetricsCollector/InnometricsTransfer/InnometricsTransfer/Base.lproj/: Main.storyboard
macOSMetricsCollector/InnometricsTransfer/InnometricsTransfer/InnoMetricsCollector.xcdatamodeld/: .xccurrentversion
(+4 files in other folders)
